--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -8,15 +8,15 @@
  
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
-| R01                | users(__IDuser__ UK NN, username UK NN, password NN, name, lastName, gender, country, email UK NN)                                         |
-| R02                | projects(__IDproject__ UK NN, projTitle NN, projDescription NN, teamSize NN, privacy NN)           |
-| R03                | projectMembers(__projectID__ → projects NN, userID → users NN, role)                       |
-| R04                | tasks(__IDtask__ UK NN, taskOwner → users, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateCreated NN,dateLimit, status) |
-| R05                | taskInProgress(__IDtask__ UK NN, taskWorker → users NN) |
-| R06                | taskCompleted(__IDtask__ UK NN, taskWorker → users NN, completionDate NN) |
-| R07                | forumPost(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, post NN, dateCreated NN)                                |
-| R08                | comments(__IDcomment__ UK NN, forumID → forum NN, ownerID  → users NN, commentText NN, commentDate NN)                       |
-| R09                | notification(__userID__ → users NN, __senderID__ → users NN, projectID → projects NN, taskID, notificationText NN, dateSent NN) |
+| R01                | users(__user_ID__ UK NN, username UK NN, password NN, name, lastName, gender, country, email UK NN)                                         |
+| R02                | projects(__project_ID__ UK NN, projTitle NN, projDescription NN, teamSize NN, privacy NN)           |
+| R03                | projectMembers(__project_ID__ → projects NN, user_ID → users NN, role)                       |
+| R04                | tasks(__task_ID__ UK NN, taskOwner → users, project_ID → projects NN, taskName NN, taskDescription NN, priority NN, dateCreated NN,dateLimit, status) |
+| R05                | taskInProgress(__task_ID__ UK NN, taskWorker → users NN) |
+| R06                | taskCompleted(__task_ID__ UK NN, taskWorker → users NN, completionDate NN) |
+| R07                | forumPost(__forum_ID__ UK NN, project_ID → projects NN, owner_ID → users NN, forumTitle NN, post NN, dateCreated NN)                                |
+| R08                | comments(__comment_ID__ UK NN, forum_ID → forum NN, owner_ID  → users NN, commentText NN, commentDate NN)                       |
+| R09                | notification(__user_ID__ → users NN, __sender_ID__ → users NN, project_ID → projects NN, task_ID, notificationText NN, dateSent NN) |
 
 where UK means UNIQUE KEY, NN means NOT NULL, DF means DEFAULT and CK means CHECK. 
  
@@ -39,69 +39,69 @@ Specification of additional domains:
  
 | **Table R01** (users)                    |   |
 | -------------------------------- | - |
-| **Keys**: { IDuser }, { username }, { email }                 |   |
+| **Keys**: { user_ID }, { username }, { email }                 |   |
 | **Functional Dependencies**      |   |
-| FD0101          | {IDuser} → {username, password, name, lastName, gender, country, email} |
-| FD0102          | {username} → {IDuser, password, name, lastName, gender, country, email} |
-| FD0103          | {email} → {IDuser, password, name, lastName, gender, country, username} |
+| FD0101          | {user_ID} → {username, password, name, lastName, gender, country, email} |
+| FD0102          | {username} → {user_ID, password, name, lastName, gender, country, email} |
+| FD0103          | {email} → {user_ID, password, name, lastName, gender, country, username} |
 | **Normal Form** | BCNF           |
  
 | **Table R02** (projects)               |   |
 | -------------------------------- | - |
-| **Keys**: { IDproject }                 |   |
+| **Keys**: { project_ID }                 |   |
 | **Functional Dependencies**      |   |
-| FD0201          | {IDproject} → {projTitle, projDescription, teamSize, privacy} |
+| FD0201          | {project_ID} → {projTitle, projDescription, teamSize, privacy} |
 | **Normal Form** | BCNF           |
  
 | **Table R03** (projectMembers)                         |   |
 | ----------------------------------------- | - |
-| **Keys**: { projectID, userID }              |   |
+| **Keys**: { project_ID, user_ID }              |   |
 | **Functional Dependencies**               |   |
-| FD0301          | { projectID, userID } → {role} |
+| FD0301          | { project_ID, user_ID } → {role} |
 | **Normal Form** | BCNF                    |
 
 | **Table R04** (tasks)                                |   |
 | ------------------------------------------------ | - |
-| **Keys**: { IDtask, projectID }                         |   |
+| **Keys**: { task_ID, project_ID }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0401          | { IDtask, projectID } → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
+| FD0401          | { task_ID, project_ID } → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
 | **Table R05** (taskInProgress)                                |   |
 | ------------------------------------------------ | - |
-| **Keys**: { taskID }                         |   |
+| **Keys**: { task_ID }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0401          | { taskID } → {taskWorker} |
+| FD0401          | { task_ID } → {taskWorker} |
 | **Normal Form** | BCNF                           |
 
 | **Table R06** (taskCompleted)                                |   |
 | ------------------------------------------------ | - |
-| **Keys**: { taskID }                         |   |
+| **Keys**: { task_ID }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0401          | { taskID } → {taskWorker, completionDate} |
+| FD0401          | { task_ID } → {taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
 | **Table R07** (forumPost)                  |   |
 | ---------------------------------------- | - |
-| **Keys**: { (IDforum, projectID) }        |   |
+| **Keys**: { (forum_ID, project_ID) }        |   |
 | **Functional Dependencies**               |   |
-| FD0501          | { IDforum, projectID } → {ownerID, forumTitle, post, dateCreated} |
-| FD0502          | { ownerID } → {IDforum, projectID, forumTitle, post, dateCreated} |
+| FD0501          | { forum_ID, project_ID } → {owner_ID, forumTitle, post, dateCreated} |
+| FD0502          | { owner_ID } → {forum_ID, project_ID, forumTitle, post, dateCreated} |
 | **Normal Form** | BCNF                    |
 
 | **Table R08** (comments)                   |   |
 | ---------------------------------------- | - |
-| **Keys**: { IDcomment, forumID }, { ownerID }  |   |
+| **Keys**: { comment_ID, forum_ID }, { owner_ID }  |   |
 | **Functional Dependencies**               |   |
-| FD0601          | { IDcomment, forumID } → {ownerID, commentText, commentDate} |
-| FD0602          | { onwerID } → {IDcomment, forumID, commentText, commentDate} |
+| FD0601          | { comment_ID, forum_ID } → {owner_ID, commentText, commentDate} |
+| FD0602          | { onwer_ID } → {comment_ID, forum_ID, commentText, commentDate} |
 | **Normal Form** | BCNF                    |
 
 | **Table R09** (notification)           |   |
 | ---------------------------------------- | - |
-| **Keys**: { userID, senderID } |   |
+| **Keys**: { user_ID, sender_ID } |   |
 | **Functional Dependencies**               |   |
-| FD0701          | { userID, senderID } → {projectID, taskID, notificationText, dateSent} |
+| FD0701          | { user_ID, sender_ID } → {project_ID, task_ID, notificationText, dateSent} |
 | **Normal Form** | BCNF                    |
  
 > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. 
@@ -113,7 +113,7 @@ Specification of additional domains:
 PRAGMA foreign_keys = ON;
 
 CREATE TABLE users(
-	IDuser INTEGER PRIMARY KEY Autoincrement NOT NULL,
+	user_ID INTEGER PRIMARY KEY Autoincrement NOT NULL,
 	username VARCHAR(60) NOT NULL,
 	password VARCHAR(60) NOT NULL,
 	name VARCHAR(60),
@@ -124,7 +124,7 @@ CREATE TABLE users(
 );
 
 CREATE TABLE projects(
-	IDproject INTEGER PRIMARY KEY Autoincrement NOT NULL,
+	project_ID INTEGER PRIMARY KEY Autoincrement NOT NULL,
 	projTitle VARCHAR(60) NOT NULL,
 	projDescription VARCHAR(500) NOT NULL,
 	teamSize INTEGER NOT NULL,
@@ -132,16 +132,16 @@ CREATE TABLE projects(
 );
 
 CREATE TABLE projectMembers(
-	projectID INTEGER REFERENCES projects(IDproject),
-	userID INTEGER REFERENCES users(IDuser),
+	project_ID INTEGER REFERENCES projects(project_ID),
+	user_ID INTEGER REFERENCES users(user_ID),
 	role ENUM('Coordinator', 'Member', 'Pending'),
-	PRIMARY KEY (projectID)
+	PRIMARY KEY (project_ID)
 );
 
 CREATE TABLE tasks(
-	IDtask INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
-	taskOwner INTEGER REFERENCES users(IDuser) NOT NULL,
-	projectID INTEGER REFERENCES projects(IDproject) NOT NULL,
+	task_ID INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
+	taskOwner INTEGER REFERENCES users(user_ID) NOT NULL,
+	project_ID INTEGER REFERENCES projects(project_ID) NOT NULL,
 	taskName VARCHAR(60) NOT NULL,
 	taskDescription VARCHAR(500) NOT NULL,
 	priority ENUM('High', 'Medium', 'Low') NOT NULL,
@@ -151,38 +151,38 @@ CREATE TABLE tasks(
 );
 
 CREATE TABLE taskInProgress(
-	taskID INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
-	taskWorker INTEGER REFERENCES users(IDuser) NOT NULL
+	task_ID INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
+	taskWorker INTEGER REFERENCES users(user_ID) NOT NULL
 );
 
 CREATE TABLE taskCompleted(
-	taskID INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
-	taskWorker INTEGER REFERENCES users(IDuser) NOT NULL,
+	task_ID INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
+	taskWorker INTEGER REFERENCES users(user_ID) NOT NULL,
 	completionDate DATE NOT NULL
 );
 
 CREATE TABLE forumPost(
-	IDforum INTEGER PRIMARY KEY Autoincrement NOT NULL,
-	projectID INTEGER REFERENCES projects(IDproject) NOT NULL,
-	ownerID INTEGER REFERENCES users(IDuser) NOT NULL,
+	forum_ID INTEGER PRIMARY KEY Autoincrement NOT NULL,
+	project_ID INTEGER REFERENCES projects(project_ID) NOT NULL,
+	owner_ID INTEGER REFERENCES users(user_ID) NOT NULL,
 	forumTitle VARCHAR(60) NOT NULL,
 	post VARCHAR(500) NOT NULL,
 	dateCreated DATE NOT NULL
 );
 
 CREATE TABLE comments(
-	IDcomment INTEGER PRIMARY KEY Autoincrement NOT NULL,
-	forumID INTEGER REFERENCES forum(IDforum) NOT NULL,
-	ownerID INTEGER REFERENCES users(IDuser) NOT NULL,
+	comment_ID INTEGER PRIMARY KEY Autoincrement NOT NULL,
+	forum_ID INTEGER REFERENCES forumPost(forum_ID) NOT NULL,
+	owner_ID INTEGER REFERENCES users(user_ID) NOT NULL,
 	commentText VARCHAR(500) NOT NULL,
 	commentDate DATE NOT NULL
 );
 
 CREATE TABLE notification(
-	userID INTEGER REFERENCES users(IDuser) NOT NULL,
-	senderID INTEGER REFERENCES users(IDuser) NOT NULL,
-	projectID INTEGER REFERENCES projects(IDproject) NOT NULL,
-	taskID INTEGER REFERENCES tasks(IDtask),
+	user_ID INTEGER REFERENCES users(user_ID) NOT NULL,
+	sender_ID INTEGER REFERENCES users(user_ID) NOT NULL,
+	project_ID INTEGER REFERENCES projects(project_ID) NOT NULL,
+	task_ID INTEGER REFERENCES tasks(task_ID),
 	notificationText VARCHAR(500) NOT NULL,
 	dateSent DATE NOT NULL
 );
