--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -16,7 +16,7 @@
 | R06                | taskCompleted(__task_ID__ UK NN, taskWorker → users NN, completionDate NN) |
 | R07                | forumPost(__forum_ID__ UK NN, project_ID → projects NN, owner_ID → users NN, forumTitle NN, post NN, dateCreated NN)                                |
 | R08                | comments(__comment_ID__ UK NN, forum_ID → forum NN, owner_ID  → users NN, commentText NN, commentDate NN)                       |
-| R09                | notification(__user_ID__ → users NN, __sender_ID__ → users NN, project_ID → projects NN, task_ID, notificationText NN, dateSent NN) |
+| R09                | notification(__notification_ID__ UK NN, user_ID → users NN, sender_ID → users NN, project_ID → projects NN, task_ID, notificationText NN, dateSent NN) |
 
 where UK means UNIQUE KEY, NN means NOT NULL, DF means DEFAULT and CK means CHECK. 
  
@@ -99,9 +99,10 @@ Specification of additional domains:
 
 | **Table R09** (notification)           |   |
 | ---------------------------------------- | - |
-| **Keys**: { user_ID, sender_ID } |   |
+| **Keys**: { notification_ID }, { user_ID, sender_ID } |   |
 | **Functional Dependencies**               |   |
-| FD0701          | { user_ID, sender_ID } → {project_ID, task_ID, notificationText, dateSent} |
+| FD0701          | { notification_ID } → {user_ID, sender_ID, project_ID, task_ID, notificationText, dateSent} |
+| FD0702          | { user_ID, sender_ID } → {notification_ID, project_ID, task_ID, notificationText, dateSent} |
 | **Normal Form** | BCNF                    |
  
 > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. 
@@ -179,6 +180,7 @@ CREATE TABLE comments(
 );
 
 CREATE TABLE notification(
+	notification_ID INTEGER PRIMARY KEY Autoincrement NOT NULL,
 	user_ID INTEGER REFERENCES users(user_ID) NOT NULL,
 	sender_ID INTEGER REFERENCES users(user_ID) NOT NULL,
 	project_ID INTEGER REFERENCES projects(project_ID) NOT NULL,
