--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -11,12 +11,13 @@
 | R01                | users(__user_ID__ UK NN, username UK NN, password NN, name, lastName, gender, country, email UK NN)                                         |
 | R02                | projects(__project_ID__ UK NN, projTitle NN, projDescription NN, teamSize NN, privacy NN)           |
 | R03                | projectMembers(__project_ID__ → projects NN, user_ID → users NN, role)                       |
-| R04                | tasks(__task_ID__ UK NN, taskOwner → users, project_ID → projects NN, taskName NN, taskDescription NN, priority NN, dateCreated NN,dateLimit, status) |
-| R05                | taskInProgress(__task_ID__ UK NN, taskWorker → users NN) |
-| R06                | taskCompleted(__task_ID__ UK NN, taskWorker → users NN, completionDate NN) |
-| R07                | forumPost(__forum_ID__ UK NN, project_ID → projects NN, owner_ID → users NN, forumTitle NN, post NN, dateCreated NN)                                |
-| R08                | comments(__comment_ID__ UK NN, forum_ID → forum NN, owner_ID  → users NN, commentText NN, commentDate NN)                       |
-| R09                | notification(__notification_ID__ UK NN, user_ID → users NN, sender_ID → users NN, project_ID → projects NN, task_ID, notificationText NN, dateSent NN) |
+| R04                | bannedMembers(__project_ID__ → projects NN, user_ID → users NN, role)                       |
+| R05                | tasks(__task_ID__ UK NN, taskOwner → users, project_ID → projects NN, taskName NN, taskDescription NN, priority NN, dateCreated NN,dateLimit, status) |
+| R06                | taskInProgress(__task_ID__ UK NN, taskWorker → users NN) |
+| R07                | taskCompleted(__task_ID__ UK NN, taskWorker → users NN, completionDate NN) |
+| R08                | forumPost(__forum_ID__ UK NN, project_ID → projects NN, owner_ID → users NN, forumTitle NN, post NN, dateCreated NN)                                |
+| R09                | comments(__comment_ID__ UK NN, forum_ID → forum NN, owner_ID  → users NN, commentText NN, commentDate NN)                       |
+| R10                | notification(__notification_ID__ UK NN, user_ID → users NN, sender_ID → users NN, project_ID → projects NN, task_ID, notificationText NN, dateSent NN) |
 
 where UK means UNIQUE KEY, NN means NOT NULL, DF means DEFAULT and CK means CHECK. 
  
@@ -59,29 +60,36 @@ Specification of additional domains:
 | **Functional Dependencies**               |   |
 | FD0301          | { project_ID, user_ID } → {role} |
 | **Normal Form** | BCNF                    |
+ 
+| **Table R04** (bannedMembers)                         |   |
+| ----------------------------------------- | - |
+| **Keys**: { project_ID, user_ID }              |   |
+| **Functional Dependencies**               |   |
+| FD0301          | { project_ID, user_ID } → {role} |
+| **Normal Form** | BCNF                    |
 
-| **Table R04** (tasks)                                |   |
+| **Table R05** (tasks)                                |   |
 | ------------------------------------------------ | - |
 | **Keys**: { task_ID, project_ID }                         |   |
 | **Functional Dependencies**                      |   |
 | FD0401          | { task_ID, project_ID } → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
-| **Table R05** (taskInProgress)                                |   |
+| **Table R06** (taskInProgress)                                |   |
 | ------------------------------------------------ | - |
 | **Keys**: { task_ID }                         |   |
 | **Functional Dependencies**                      |   |
 | FD0401          | { task_ID } → {taskWorker} |
 | **Normal Form** | BCNF                           |
 
-| **Table R06** (taskCompleted)                                |   |
+| **Table R07** (taskCompleted)                                |   |
 | ------------------------------------------------ | - |
 | **Keys**: { task_ID }                         |   |
 | **Functional Dependencies**                      |   |
 | FD0401          | { task_ID } → {taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
-| **Table R07** (forumPost)                  |   |
+| **Table R08** (forumPost)                  |   |
 | ---------------------------------------- | - |
 | **Keys**: { (forum_ID, project_ID) }        |   |
 | **Functional Dependencies**               |   |
@@ -89,7 +97,7 @@ Specification of additional domains:
 | FD0502          | { owner_ID } → {forum_ID, project_ID, forumTitle, post, dateCreated} |
 | **Normal Form** | BCNF                    |
 
-| **Table R08** (comments)                   |   |
+| **Table R09** (comments)                   |   |
 | ---------------------------------------- | - |
 | **Keys**: { comment_ID, forum_ID }, { owner_ID }  |   |
 | **Functional Dependencies**               |   |
@@ -97,7 +105,7 @@ Specification of additional domains:
 | FD0602          | { onwer_ID } → {comment_ID, forum_ID, commentText, commentDate} |
 | **Normal Form** | BCNF                    |
 
-| **Table R09** (notification)           |   |
+| **Table R10** (notification)           |   |
 | ---------------------------------------- | - |
 | **Keys**: { notification_ID }, { user_ID, sender_ID } |   |
 | **Functional Dependencies**               |   |
@@ -133,6 +141,13 @@ CREATE TABLE projects(
 );
 
 CREATE TABLE projectMembers(
+	project_ID INTEGER REFERENCES projects(project_ID),
+	user_ID INTEGER REFERENCES users(user_ID),
+	role ENUM('Coordinator', 'Member', 'Pending'),
+	PRIMARY KEY (project_ID)
+);
+
+CREATE TABLE bannedMembers(
 	project_ID INTEGER REFERENCES projects(project_ID),
 	user_ID INTEGER REFERENCES users(user_ID),
 	role ENUM('Coordinator', 'Member', 'Pending'),
