--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -17,7 +17,9 @@
 | R07                | taskCompleted(__task_ID__ UK NN, taskWorker → users NN, completionDate NN) |
 | R08                | forumPost(__forum_ID__ UK NN, project_ID → projects NN, owner_ID → users NN, forumTitle NN, post NN, dateCreated NN)                                |
 | R09                | comments(__comment_ID__ UK NN, forum_ID → forum NN, owner_ID  → users NN, commentText NN, commentDate NN)                       |
-| R10                | notification(__notification_ID__ UK NN, user_ID → users NN, sender_ID → users NN, project_ID → projects NN, task_ID, notificationText NN, dateSent NN) |
+| R10                | commentUpVote(__comment_ID__ → projects NN, voter_ID → users NN, role)                       |
+| R11                | commentDownVote(__comment_ID__ → projects NN, voter_ID → users NN, role)                       |
+| R12                | notification(__notification_ID__ UK NN, user_ID → users NN, sender_ID → users NN, project_ID → projects NN, task_ID, notificationText NN, dateSent NN) |
 
 where UK means UNIQUE KEY, NN means NOT NULL, DF means DEFAULT and CK means CHECK. 
  
@@ -63,54 +65,71 @@ Specification of additional domains:
  
 | **Table R04** (bannedMembers)                         |   |
 | ----------------------------------------- | - |
-| **Keys**: { project_ID, user_ID }              |   |
+| **Keys**: { project_ID }, { user_ID }              |   |
 | **Functional Dependencies**               |   |
-| FD0301          | { project_ID, user_ID } → {role} |
+| FD0401          | { project_ID} → { user_ID } |
+| FD0401          | { user_ID} → { project_ID } |
 | **Normal Form** | BCNF                    |
 
 | **Table R05** (tasks)                                |   |
 | ------------------------------------------------ | - |
 | **Keys**: { task_ID, project_ID }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0401          | { task_ID, project_ID } → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
+| FD0501          | { task_ID, project_ID } → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
 | **Table R06** (taskInProgress)                                |   |
 | ------------------------------------------------ | - |
 | **Keys**: { task_ID }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0401          | { task_ID } → {taskWorker} |
+| FD0601          | { task_ID } → {taskWorker} |
 | **Normal Form** | BCNF                           |
 
 | **Table R07** (taskCompleted)                                |   |
 | ------------------------------------------------ | - |
 | **Keys**: { task_ID }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0401          | { task_ID } → {taskWorker, completionDate} |
+| FD0701          | { task_ID } → {taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
 | **Table R08** (forumPost)                  |   |
 | ---------------------------------------- | - |
 | **Keys**: { (forum_ID, project_ID) }        |   |
 | **Functional Dependencies**               |   |
-| FD0501          | { forum_ID, project_ID } → {owner_ID, forumTitle, post, dateCreated} |
-| FD0502          | { owner_ID } → {forum_ID, project_ID, forumTitle, post, dateCreated} |
+| FD0801          | { forum_ID, project_ID } → {owner_ID, forumTitle, post, dateCreated} |
+| FD0802          | { owner_ID } → {forum_ID, project_ID, forumTitle, post, dateCreated} |
 | **Normal Form** | BCNF                    |
 
 | **Table R09** (comments)                   |   |
 | ---------------------------------------- | - |
 | **Keys**: { comment_ID, forum_ID }, { owner_ID }  |   |
 | **Functional Dependencies**               |   |
-| FD0601          | { comment_ID, forum_ID } → {owner_ID, commentText, commentDate} |
-| FD0602          | { onwer_ID } → {comment_ID, forum_ID, commentText, commentDate} |
+| FD0901          | { comment_ID, forum_ID } → {owner_ID, commentText, commentDate} |
+| FD0902          | { onwer_ID } → {comment_ID, forum_ID, commentText, commentDate} |
+| **Normal Form** | BCNF                    |
+ 
+| **Table R10** (commentUpVote)                         |   |
+| ----------------------------------------- | - |
+| **Keys**: { comment_ID, user_ID }              |   |
+| **Functional Dependencies**               |   |
+| FD1001          | { comment_ID } → { voter_ID } |
+| FD1002          | { voter_ID } → { comment_ID } |
+| **Normal Form** | BCNF                    |
+ 
+| **Table R11** (commentDownVote)                         |   |
+| ----------------------------------------- | - |
+| **Keys**: { comment_ID, user_ID }              |   |
+| **Functional Dependencies**               |   |
+| FD1101          | { comment_ID } → { voter_ID } |
+| FD1102          | { voter_ID } → { comment_ID } |
 | **Normal Form** | BCNF                    |
 
-| **Table R10** (notification)           |   |
+| **Table R12** (notification)           |   |
 | ---------------------------------------- | - |
 | **Keys**: { notification_ID }, { user_ID, sender_ID } |   |
 | **Functional Dependencies**               |   |
-| FD0701          | { notification_ID } → {user_ID, sender_ID, project_ID, task_ID, notificationText, dateSent} |
-| FD0702          | { user_ID, sender_ID } → {notification_ID, project_ID, task_ID, notificationText, dateSent} |
+| FD1201          | { notification_ID } → {user_ID, sender_ID, project_ID, task_ID, notificationText, dateSent} |
+| FD1202          | { user_ID, sender_ID } → {notification_ID, project_ID, task_ID, notificationText, dateSent} |
 | **Normal Form** | BCNF                    |
  
 > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. 
@@ -150,7 +169,6 @@ CREATE TABLE projectMembers(
 CREATE TABLE bannedMembers(
 	project_ID INTEGER REFERENCES projects(project_ID),
 	user_ID INTEGER REFERENCES users(user_ID),
-	role ENUM('Coordinator', 'Member', 'Pending'),
 	PRIMARY KEY (project_ID)
 );
 
@@ -192,6 +210,18 @@ CREATE TABLE comments(
 	owner_ID INTEGER REFERENCES users(user_ID) NOT NULL,
 	commentText VARCHAR(500) NOT NULL,
 	commentDate DATE NOT NULL
+);
+
+CREATE TABLE commentUpVote(
+	comment_ID INTEGER REFERENCES comments(comment_ID) NOT NULL,
+	voter_ID INTEGER REFERENCES users(user_ID) NOT NULL,
+	PRIMARY KEY(comment_ID)
+);
+
+CREATE TABLE commentDownVote(
+	comment_ID INTEGER REFERENCES comments(comment_ID) NOT NULL,
+	voter_ID INTEGER REFERENCES users(user_ID) NOT NULL,
+	PRIMARY KEY(comment_ID)
 );
 
 CREATE TABLE notification(
