--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -11,6 +11,8 @@
 | R01                | users(__user_ID__ UK NN, username UK NN, password NN, name, lastName, gender, country, email UK NN)                                         |
 | R02                | projects(__project_ID__ UK NN, projTitle NN, projDescription NN, teamSize NN, privacy NN)           |
 | R03                | projectMembers(__project_ID__ → projects NN, user_ID → users NN, role)                       |
+| R04                | invitedMembers(__project_ID__ → projects NN, user_ID → users NN, inviter_ID → users NN, inviteDate NN) |
+| R04                | appliedMembers(__project_ID__ → projects NN, user_ID → users NN, applicationDate NN) |
 | R04                | bannedMembers(__project_ID__ → projects NN, user_ID → users NN, role)                       |
 | R05                | tasks(__task_ID__ UK NN, taskOwner → users, project_ID → projects NN, taskName NN, taskDescription NN, priority NN, dateCreated NN,dateLimit, status) |
 | R06                | taskInProgress(__task_ID__ UK NN, taskWorker → users NN) |
@@ -63,73 +65,90 @@ Specification of additional domains:
 | FD0301          | { project_ID, user_ID } → {role} |
 | **Normal Form** | BCNF                    |
  
-| **Table R04** (bannedMembers)                         |   |
+| **Table R04** (invitedMembers)                         |   |
+| ----------------------------------------- | - |
+| **Keys**: { project_ID }, { user_ID }, { inviter_ID }  |   |
+| **Functional Dependencies**               |   |
+| FD0401          | { project_ID} → { user_ID, inviter_ID, inviteDate } |
+| FD0402          | { user_ID} → { project_ID, inviter_ID, inviteDate } |
+| FD0403          | { inviter_ID} → { project_ID, user_ID, inviteDate } |
+| **Normal Form** | BCNF                    |
+ 
+| **Table R05** (appliedMembers)                         |   |
 | ----------------------------------------- | - |
 | **Keys**: { project_ID }, { user_ID }              |   |
 | **Functional Dependencies**               |   |
-| FD0401          | { project_ID} → { user_ID } |
-| FD0401          | { user_ID} → { project_ID } |
+| FD0501          | { project_ID} → { user_ID, applicationDate } |
+| FD0502          | { user_ID} → { project_ID, applicationDate } |
+| **Normal Form** | BCNF                    |
+ 
+| **Table R06** (bannedMembers)                         |   |
+| ----------------------------------------- | - |
+| **Keys**: { project_ID }, { user_ID }              |   |
+| **Functional Dependencies**               |   |
+| FD0601          | { project_ID} → { user_ID } |
+| FD0602          | { user_ID} → { project_ID } |
 | **Normal Form** | BCNF                    |
 
-| **Table R05** (tasks)                                |   |
+| **Table R07** (tasks)                                |   |
 | ------------------------------------------------ | - |
 | **Keys**: { task_ID, project_ID }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0501          | { task_ID, project_ID } → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
+| FD0701          | { task_ID, project_ID } → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
-| **Table R06** (taskInProgress)                                |   |
+| **Table R08** (taskInProgress)                                |   |
 | ------------------------------------------------ | - |
 | **Keys**: { task_ID }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0601          | { task_ID } → {taskWorker} |
+| FD0801          | { task_ID } → {taskWorker} |
 | **Normal Form** | BCNF                           |
 
-| **Table R07** (taskCompleted)                                |   |
+| **Table R09** (taskCompleted)                                |   |
 | ------------------------------------------------ | - |
 | **Keys**: { task_ID }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0701          | { task_ID } → {taskWorker, completionDate} |
+| FD0901          | { task_ID } → {taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
-| **Table R08** (forumPost)                  |   |
+| **Table R10** (forumPost)                  |   |
 | ---------------------------------------- | - |
 | **Keys**: { (forum_ID, project_ID) }        |   |
 | **Functional Dependencies**               |   |
-| FD0801          | { forum_ID, project_ID } → {owner_ID, forumTitle, post, dateCreated} |
-| FD0802          | { owner_ID } → {forum_ID, project_ID, forumTitle, post, dateCreated} |
+| FD1001          | { forum_ID, project_ID } → {owner_ID, forumTitle, post, dateCreated} |
+| FD1002          | { owner_ID } → {forum_ID, project_ID, forumTitle, post, dateCreated} |
 | **Normal Form** | BCNF                    |
 
-| **Table R09** (comments)                   |   |
+| **Table R11** (comments)                   |   |
 | ---------------------------------------- | - |
 | **Keys**: { comment_ID, forum_ID }, { owner_ID }  |   |
 | **Functional Dependencies**               |   |
-| FD0901          | { comment_ID, forum_ID } → {owner_ID, commentText, commentDate} |
-| FD0902          | { onwer_ID } → {comment_ID, forum_ID, commentText, commentDate} |
+| FD1101          | { comment_ID, forum_ID } → {owner_ID, commentText, commentDate} |
+| FD1102          | { onwer_ID } → {comment_ID, forum_ID, commentText, commentDate} |
 | **Normal Form** | BCNF                    |
  
-| **Table R10** (commentUpVote)                         |   |
+| **Table R12** (commentUpVote)                         |   |
 | ----------------------------------------- | - |
 | **Keys**: { comment_ID, user_ID }              |   |
 | **Functional Dependencies**               |   |
-| FD1001          | { comment_ID } → { voter_ID } |
-| FD1002          | { voter_ID } → { comment_ID } |
+| FD1201          | { comment_ID } → { voter_ID } |
+| FD1202          | { voter_ID } → { comment_ID } |
 | **Normal Form** | BCNF                    |
  
-| **Table R11** (commentDownVote)                         |   |
+| **Table R13** (commentDownVote)                         |   |
 | ----------------------------------------- | - |
 | **Keys**: { comment_ID, user_ID }              |   |
 | **Functional Dependencies**               |   |
-| FD1101          | { comment_ID } → { voter_ID } |
-| FD1102          | { voter_ID } → { comment_ID } |
+| FD1301          | { comment_ID } → { voter_ID } |
+| FD1302          | { voter_ID } → { comment_ID } |
 | **Normal Form** | BCNF                    |
 
-| **Table R12** (notification)           |   |
+| **Table R14** (notification)           |   |
 | ---------------------------------------- | - |
 | **Keys**: { notification_ID }, { user_ID, sender_ID } |   |
 | **Functional Dependencies**               |   |
-| FD1201          | { notification_ID } → {user_ID, sender_ID, project_ID, task_ID, notificationText, dateSent} |
-| FD1202          | { user_ID, sender_ID } → {notification_ID, project_ID, task_ID, notificationText, dateSent} |
+| FD1401          | { notification_ID } → {user_ID, sender_ID, project_ID, task_ID, notificationText, dateSent} |
+| FD1402          | { user_ID, sender_ID } → {notification_ID, project_ID, task_ID, notificationText, dateSent} |
 | **Normal Form** | BCNF                    |
  
 > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. 
@@ -160,17 +179,33 @@ CREATE TABLE projects(
 );
 
 CREATE TABLE projectMembers(
-	project_ID INTEGER REFERENCES projects(project_ID),
-	user_ID INTEGER REFERENCES users(user_ID),
-	role ENUM('Coordinator', 'Member', 'Pending'),
+	project_ID INTEGER REFERENCES projects(project_ID) NOT NULL,
+	user_ID INTEGER REFERENCES users(user_ID) NOT NULL,
+	role ENUM('Coordinator', 'Member', 'Pending') NOT NULL,
+	PRIMARY KEY (project_ID)
+);
+
+CREATE TABLE invitedMembers(
+	project_ID INTEGER REFERENCES projects(project_ID) NOT NULL,
+	user_ID INTEGER REFERENCES users(user_ID) NOT NULL,
+	inviter_ID INTEGER REFERENCES users(user_ID) NOT NULL,
+	inviteDate DATE NOT NULL,
+	PRIMARY KEY (project_ID)
+);
+
+CREATE TABLE appliedMembers(
+	project_ID INTEGER REFERENCES projects(project_ID) NOT NULL,
+	user_ID INTEGER REFERENCES users(user_ID) NOT NULL,
+	applicationDate DATE NOT NULL,
 	PRIMARY KEY (project_ID)
 );
 
 CREATE TABLE bannedMembers(
-	project_ID INTEGER REFERENCES projects(project_ID),
-	user_ID INTEGER REFERENCES users(user_ID),
+	project_ID INTEGER REFERENCES projects(project_ID) NOT NULL,
+	user_ID INTEGER REFERENCES users(user_ID) NOT NULL,
 	PRIMARY KEY (project_ID)
 );
+	
 
 CREATE TABLE tasks(
 	task_ID INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
@@ -233,7 +268,6 @@ CREATE TABLE notification(
 	notificationText VARCHAR(500) NOT NULL,
 	dateSent DATE NOT NULL
 );
-
 
 ```
 
