--- a/Report6/A6.md
+++ b/Report6/A6.md
@@ -15,6 +15,16 @@
 | R02                | Table2        | units|dozens|hundreds|etc | dozens per month |
 | R03                | Table3        | units|dozens|hundreds|etc | hundreds per day |
 | R04                | Table4        | units|dozens|hundreds|etc | no growth        |
+| R05                | Table1        | units|dozens|hundreds|etc | order per time   |
+| R06                | Table2        | units|dozens|hundreds|etc | dozens per month |
+| R07                | Table3        | units|dozens|hundreds|etc | hundreds per day |
+| R08                | Table4        | units|dozens|hundreds|etc | no growth        |
+| R09                | Table1        | units|dozens|hundreds|etc | order per time   |
+| R10                | Table2        | units|dozens|hundreds|etc | dozens per month |
+| R11                | Table3        | units|dozens|hundreds|etc | hundreds per day |
+| R12                | Table4        | units|dozens|hundreds|etc | no growth        |
+| R13                | Table1        | units|dozens|hundreds|etc | order per time   |
+| R14                | Table2        | units|dozens|hundreds|etc | dozens per month |
  
  
 ### 1.2. Frequent Queries
