--- a/Report6/A6.md
+++ b/Report6/A6.md
@@ -32,11 +32,10 @@
 > Most important queries (SELECT) and their frequency.
  
 | Query reference   | SELECT01                               |
-
 | Query description | One sentence describing the query goal |
 | Query frequency   | magnitude per time                     |
 | ----------------- | -------------------------------------- |
-| SQL code                                                   |
+| SQL code          |                                        |
  
  
 ### 1.3. Frequent Updates
