--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -2,7 +2,7 @@
  
 ## 1. Overview
  
-> Identify and overview the modules that will be part of the application.
+> The architecture of the web application to develop is documented indicating the catalogue of resources and the properties of each resource, including: references to the graphical interfaces, and the format of JSON responses. This page presents a documentation for Media Library, including the following operations over data: create, read, update, and delete.
  
 ## 2. Permissions
  
