--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -6,14 +6,17 @@
  
 ## 2. Permissions
  
-> Define the permissions used by each module, necessary to access its data and features.
+> This section defines the permissions used in the modules to establish the conditions of access to resources.
+
+| PUB | Relation Compact Notation                  |                          |
+| ------------------ | -------------------------------------------------------------------- | --|
+| USR                |    |  |
+| OWN                | |           |
+| ADM                | |           |
  
 ## 3. Modules
  
-> Web resources organized by module
-> Document and describe the web resources associated with each module, indicating the URL, HTTP method, request parameters and response.
-> Follow the RESTful resource naming
-> At the end of this page is presented some usual descriptors to document the web resources.
+> This section documents each web resource of each module, indicating the URL, HTTP methods, the possible parameters, interfaces with the user (referring to the A3 artefact) — or JSON responses in the event of APIs.
  
 ### 3.1 Module 1
  
