--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -8,11 +8,11 @@
  
 > This section defines the permissions used in the modules to establish the conditions of access to resources.
 
-| PUB | Relation Compact Notation                  |                          |
-| ------------------ | -------------------------------------------------------------------- | --|
-| USR                |    |  |
-| OWN                | |           |
-| ADM                | |           |
+| __PUB__ | Public        |    |
+| ------- | ------------- | -- |
+| __USR__ | User          |    |
+| __OWN__ | Owner         |    |
+| __ADM__ | Administrator |    |
  
 ## 3. Modules
  
