--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -8,11 +8,11 @@
  
 > This section defines the permissions used in the modules to establish the conditions of access to resources.
 
-| __PUB__ | Public        |    |
-| ------- | ------------- | -- |
-| __USR__ | User          |    |
-| __OWN__ | Owner         |    |
-| __ADM__ | Administrator |    |
+| __PUB__ | Public        | Group of users without privileges                                                       |
+| ------- | ------------- | --------------------------------------------------------------------------------------- |
+| __USR__ | User          | Authenticated user                                                                      |
+| __OWN__ | Owner         | Group of users that can update their profiles and have privileges regarding their items |
+| __ADM__ | Administrator | Group of administrators                                                                 |
  
 ## 3. Modules
  
