--- a/Report8/A8.md
+++ b/Report8/A8.md
@@ -1,4 +1,9 @@
 # A8: Vertical prototype
+
+ The Vertical Prototype includes the implementation of two or more user stories (the simplest) and aims to validate the architecture presented, also serving to gain familiarity with the technologies used in the project.
+
+The implementation should be based on the LBAW skeleton and include work on all layers of the architecture of the solution to implement: user interface, business logic and data access. The prototype includes the implementation of pages of visualization, insertion, edition and removal of information; the control of permissions in the access to the implemented pages; and a presentation of error and success messages.
+ 
  
 ## 1. Implemented Features
  
