--- a/Report8/A8.md
+++ b/Report8/A8.md
@@ -9,35 +9,59 @@ The implementation should be based on the LBAW skeleton and include work on all 
  
 ### 1.1. Implemented User Stories
  
-> Identify the user stories that were implemented in the prototype.
+> The user stories that were implemented in the prototype are described in the following table.
  
 | User Story reference | Name                   | Priority                   | Description                   |
 | -------------------- | ---------------------- | -------------------------- | ----------------------------- |
 | US01                 | Name of the user story | Priority of the user story | Description of the user story |
- 
-...
+
+| User Story reference | Name                   | Priority                   | Description                                             |
+|----------------------|------------------------|----------------------------|---------------------------------------------------------|
+| US01                 |Home page               |High                        |As an User, I want to access home page, so that I can see a brief website's presentation        |
+| US02                 |About page              |High                        |As an User, I want to access the about page, so that I can see a complete website's description  |
+| US03                 |Projects page           |High                        |As an User, I want to access the projects page, so that I can see all public projects           |
+| US04                 |FAQ page                |High                        |As an User, I want to access the FAQ page, so that I can take off my doubts about the system   |
+| US05                 |Contact page            |High                        |As an User, I want to access contact page, so that I can see the contacts                      |
  
 ### 1.2. Implemented Web Resources
  
-> Identify the web resources that were implemented in the prototype.
+> The web resources that were implemented in the prototype are described in the next section.
  
-> Module M01: Module Name
+#### Module M01: Authentication and Individual Profile
  
+| Web Resource Reference     | URL                            |
+| -------------------------- | ------------------------------ |
+| R101: Login Form           | /login                         |
+| R102: Login Action         | POST /login                    |
+| R103: Logout Action        | POST /logout                   |
+| R104: Register Form        | /register                      |
+| R105: Register Action      | POST /register                 |
+| R106: View Profile         | /users?id={id}                 |
+| R107: Edit Profile Form    | /users/edit?id={id}            |
+| R108: Edit Profile Action  | POST /users/edit?id={id}       |
+| R109: Password Reset Form  | /password/reset                |
+| R110: Passord Reset Action | POST /password/reset           |
+ 
+ 
+#### Module M05: User Administration and Static pages
+
 | Web Resource Reference | URL                            |
 | ---------------------- | ------------------------------ |
-| R01: Web resource name | URL to access the web resource |
- 
-...
- 
-> Module M02: Module Name
- 
-...
+| R504: About            | /about                         |
+| R505: Services         | /services                      |
+| R506: FAQ              | /faq                           |
+| R507: Contact          | /contact                       |
  
  
 ## 2. Prototype
  
-> URL of the prototype plus user credentials necessary to test all features.
-> Link to the prototype source code on Github.
+The prototype is available at http://medialib18.lbaw-prod.fe.up.pt/
+
+Credentials:
+
+>regular user: asdf@asdf.com / asdf
+
+The code is avalable at https://github.com/lbaw-admin/MediaLib2018/tree/proto
  
  
 ## Revision history
