--- a/Report8/A8.md
+++ b/Report8/A8.md
@@ -72,7 +72,12 @@ Changes made to the first submission:
  
 ***
  
-GROUP17xx, xx/xx/2018
+GROUP1767, 28/02/2018
  
-> Group member 1 name, email
-> Group member 2 name, email
+> Carla Cristine Alvarenga Ferrarez de Castro, up201710786@fe.up.pt
+
+> Gabriel Francisco Machado, up201711002@fe.up.pt
+ 
+> João Carlos Fonseca Pina de Lemos, ee10201@fe.up.pt
+
+> Luis Guilherme da Costa Castro Neves, up201306485@fe.up.pt
