--- a/Report8/A8.md
+++ b/Report8/A8.md
@@ -72,7 +72,7 @@ Changes made to the first submission:
  
 ***
  
-GROUP1767, 28/02/2018
+GROUP1767,13/04/2018
  
 > Carla Cristine Alvarenga Ferrarez de Castro, up201710786@fe.up.pt
 
