--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -2,24 +2,59 @@
  
 ## 1. Overview
  
-> The architecture of the web application to develop is documented indicating the catalogue of resources and the properties of each resource, including: references to the graphical interfaces, and the format of JSON responses. This page presents a documentation for Media Library, including the following operations over data: create, read, update, and delete.
- 
+> Identify and overview the modules that will be part of the application.
+
+| __Module__ | Details                                                                              |
+| ------- | --------------------------------------------------------------------------------------- |
+| __M01: Authentication__ | Web resources associated with user authentication login/logout and registration.|
+| __M02: Individual Profile__ | Web resources associated with individual user items, includes the following system features: edit profile, change password, view and accept project invites, and, if you’re the project coordinator you can also accept or deny join requests.|
+| __M03: Projects__ | Web resources associated with project view and creation, includes the following system features: see all public projects with title and description, create a new project, search for a public project, join a project and see the contributors. When creating project is possible to choose description, title, privacy and number of contributors. If the user is the coordinator it can edit project settings, invite other people to project and ban members from project.| 
+| __M04: Task list__ | Web resources associated with the task list, includes the following system features: view task list, create new tasks, edit tasks, delete tasks and filter tasks.|
+| __M05: Forum__ | Web resources associated with the forum, includes the following system features: create new forum post and see forum posts with name and description. Inside a Forum Post it’s possible to see messages, write messages and filter comments.|
+| __M06: Static pages__ |Web resources with static content are associated with this module: home, about, contact and faq.|
+
+
 ## 2. Permissions
  
-> This section defines the permissions used in the modules to establish the conditions of access to resources.
+> Define the permissions used by each module, necessary to access its data and features.
 
-| __PUB__ | Public        | Group of users without privileges                                                       |
+| __User__ | Type | Details |
 | ------- | ------------- | --------------------------------------------------------------------------------------- |
-| __USR__ | User          | Authenticated user                                                                      |
-| __OWN__ | Owner         | Group of users that can update their profiles and have privileges regarding their items |
-| __ADM__ | Administrator | Group of administrators                                                                 |
+| __PUB__ | Public | Group of users without privileges, visitors |                                                                     |
+| __USR__ | User | Authenticated users |
+| __OWN__ | Owner  |Group of users that can update their profiles and have privileges to access their notifications and projects (includes forum, posts and messages) |                                                                |
  
 ## 3. Modules
  
-> This section documents each web resource of each module, indicating the URL, HTTP methods, the possible parameters, interfaces with the user (referring to the A3 artefact) — or JSON responses in the event of APIs.
+> Web resources organized by module
+
+> Document and describe the web resources associated with each module, indicating the URL, HTTP method, request parameters and response.
+
+> Follow the RESTful resource naming
+
+> At the end of this page is presented some usual descriptors to document the web resources.
+
  
-### 3.1 Module 1
+### 3.1 Module 1: Authentication
+ > These are the endpoints available in the Authentication Module.
  
+  * R101: Login Form [/login]
+  * R102: Login Action [/login]
+  * R103: Logout Action [/home]
+  * R104: Register Form [/register]
+  * R105: Register Action [/register]
+
+#### R101: Login Form
+
+| __dsdsd__ | dsds |
+| ------- | ------------- |
+| __M01: Authentication__ | Web resources associated with user authentication login/logout and registration.|
+| __M02: Individual Profile__ | Web resources associated with individual user items, includes the following system features: edit profile, change password, view and accept project invites, and, if you’re the project coordinator you can also accept or deny join requests.|
+
+
+
+
+
 ### 3.2 Module 2
  
 ## 4. JSON/XML Types
